fixed the alignment issue in card -1 and card -2
fixed the alignment issue in card -1 and card -2

--- a/src/assets/css/dbc.css
+++ b/src/assets/css/dbc.css
@@ -261,11 +261,13 @@ body.dbc-app:not(.dbc-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
 }
 
 .dbc-app .dbc-content-area-wrapper .dbs-add-card-wrapper {
+  width: 100%;
   height: 100%;
 }
 
 .dbc-app .dbc-content-area-wrapper .dbs-add-card-wrapper .dbc-card-item-parent.card-with-bg {
   max-width: 300px;
+  min-width: 240px;
   margin: 0 auto;
 }
 
@@ -300,6 +302,32 @@ body.dbc-app:not(.dbc-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
 
 .dbc-app .dbc-ml-1 {
   /* margin-left: 1rem; */
+}
+
+
+/*utility classes*/
+.dbc-place-me-top-right {
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+}
+
+.dbc-place-me-top-left {
+  position: absolute;
+  bottom: 16px;
+  left: 16px;
+}
+
+.dbc-place-me-bottom-right {
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+}
+
+.dbc-place-me-bottom-left {
+  position: absolute;
+  bottom: 16px;
+  left: 16px;
 }
 
 /*Body end*/
@@ -376,6 +404,7 @@ body.dbc-app:not(.dbc-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
   font-weight: bold;
   color: #2f4694;
   height: 32px;
+  justify-content: space-between;
 }
 
 .dbc-app .dbc-body-actions {
@@ -478,7 +507,7 @@ body.dbc-app:not(.dbc-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
 .dbc-app .dbc-card-company-logo-wrapper {
   position: absolute;
   /* float: right; */
-  height: 42px;
+  height: 40px;
   width: calc(100% - 15px);
   background-size: 50px 50px;
   background-position: 10px;
@@ -486,6 +515,23 @@ body.dbc-app:not(.dbc-app-on-macintosh)::-webkit-scrollbar-thumb:hover,
   display: flex;
   display: flex;
   justify-content: end;
+}
+
+.dbc-app .dbc-ext-card-item-wrapper .dbc-card-company-logo-wrapper {
+  height: 70px;
+}
+
+.dbc-app .dbc-ext-card-item-wrapper .dbc-card-upload-picture {
+  min-width: 150px;
+  min-height: 150px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+  margin-top: 64px;
+  margin-bottom: 10px;
+}
+
+.dbc-app .dbc-ext-card-item-wrapper .dbc-card-item-parent.card-with-bg {
+  padding: 24px;
 }
 
 .dbs-card-field-item {}
